horizontal menu on mobile,and corresponing postioning of main container and searchbar; image J.K.Rowling correction url; style adjustment in new book searchresults; goodreads searchservice now using https

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,7 +12,7 @@
 }
 
 .main-container {
-  padding:  185px 0 25px;
+  padding:  102px 0 25px;
   border: 2px #e3a21a solid; /* color: w3-win-metro-orange */
   min-height: 100vh;
 }
@@ -30,13 +30,6 @@ footer {
 
 @media (min-width: 420px) {
   .main-container {
-    padding-top: 195px;
-  }  
-}
-
-@media (min-width: 601px) {
-  .main-container {
     padding-top: 116px;
-  }
-
+  }  
 }
